--- a/css/styles.css
+++ b/css/styles.css
@@ -40,46 +40,80 @@ a {
   border: none;
   outline: none;
   cursor: pointer;
-}
-.btn--add {
-  background-color: #ff7900;
-  box-shadow: 0 0 0 0 #ff7900;
-}
-.btn--add:hover {
-  background-color: #ff9300;
-  box-shadow: 0 0 0 0 #ff9300;
-}
-.btn--add:active {
-  background-color: #e56e00;
-}
-.btn--register {
-  background-color: rgba(255, 255, 255, 0.1019607843);
-}
-.btn--register:hover {
-  background-color: hsla(0, 0%, 100%, 0.2);
-}
-.btn--register:active {
-  background-color: hsla(0, 0%, 100%, 0.1);
-}
-.btn--register:disabled {
-  --background-color: hsla(0, 0%, 100%, 0.1);
-  color: hsla(0, 0%, 100%, 0.2);
-}
-.btn--menu {
   background-color: transparent;
   color: hsla(0, 0%, 100%, 0.8);
 }
-.btn--menu:hover {
+.btn:hover {
   background-color: hsla(0, 0%, 100%, 0.2);
   color: #ffffff;
 }
-.btn--menu:active {
+.btn:active {
   background-color: hsla(0, 0%, 100%, 0.1);
   color: hsla(0, 0%, 100%, 0.5);
 }
-.btn--menu:disabled {
+.btn:disabled {
   background-color: transparent;
   color: hsla(0, 0%, 100%, 0.2);
+}
+.btn--orange {
+  background-color: #ff7900;
+  box-shadow: 0 0 0 0 #ff7900;
+}
+.btn--orange:hover {
+  background-color: #ff9300;
+  box-shadow: 0 0 0 0 #ff9300;
+}
+.btn--orange:active {
+  background-color: #e56e00;
+}
+.btn--grey {
+  background-color: rgba(255, 255, 255, 0.1019607843);
+}
+.btn--grey:hover {
+  background-color: hsla(0, 0%, 100%, 0.2);
+}
+.btn--grey:active {
+  background-color: hsla(0, 0%, 100%, 0.1);
+}
+.btn--grey:disabled {
+  --background-color: hsla(0, 0%, 100%, 0.1);
+  color: hsla(0, 0%, 100%, 0.2);
+}
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.35);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal__inner {
+  position: relative;
+  width: 630px;
+  height: 540px;
+  background-color: #ffffff;
+  border-radius: 8px;
+}
+.modal__btn-close {
+  position: absolute;
+  right: 14px;
+  top: 14px;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-out;
+}
+.modal__btn-close:hover {
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .container {
@@ -93,7 +127,11 @@ a {
   color: #ffffff;
   height: 56px;
 }
+.header__inner {
+  position: relative;
+}
 .header__content {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -115,11 +153,24 @@ a {
   color: #ffffff;
   margin-right: 8px;
 }
+@media (max-width: 768px) {
+  .header__logo {
+    margin-right: 0;
+  }
+}
 .header__logo-img {
   width: 36px;
   margin-right: 8px;
 }
-.header__form {
+@media (max-width: 768px) {
+  .header__form.active {
+    position: absolute;
+    z-index: 2;
+    right: 48px;
+    left: 48px;
+  }
+}
+.header__form-content {
   position: relative;
 }
 .header__form-icon {
@@ -128,6 +179,16 @@ a {
   position: absolute;
   left: 8px;
   top: 6px;
+}
+@media (max-width: 768px) {
+  .header__form-icon {
+    color: #ffffff;
+  }
+}
+@media (max-width: 768px) {
+  .header__form-icon.active {
+    color: #8f949b;
+  }
 }
 .header__form-input {
   border: none;
@@ -142,6 +203,20 @@ a {
   font-size: 1rem;
   font-weight: 400;
 }
+@media (max-width: 768px) {
+  .header__form-input {
+    width: 35px;
+    padding-left: 34px;
+    padding-right: 0;
+    background-color: rgba(255, 255, 255, 0.1019607843);
+  }
+}
+@media (max-width: 768px) {
+  .header__form-input.active {
+    width: 100%;
+    background-color: #ffffff;
+  }
+}
 .header__form-input::-moz-placeholder {
   color: #8f949b;
   font-weight: 500;
@@ -155,6 +230,32 @@ a {
 .header__form-input:focus {
   box-shadow: 0 0 0 4px #ff7900;
 }
+.header__mobile-menu-btn {
+  padding: 0;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  justify-content: center;
+  display: none;
+}
+.header__mobile-menu-btn.active {
+  background-color: #868789;
+  color: #ffffff;
+}
+@media (max-width: 768px) {
+  .header__mobile-menu-btn {
+    display: flex;
+  }
+}
+.header__menu-btn.active {
+  background-color: #868789;
+  color: #ffffff;
+}
+@media (max-width: 768px) {
+  .header__menu-btn {
+    display: none;
+  }
+}
 .header__register-btn {
   margin-left: 7px;
 }
@@ -165,6 +266,7 @@ a {
     height: 36px;
     border-radius: 50%;
     justify-content: center;
+    margin-left: 0;
   }
 }
 @media screen and (max-width: 1150px) {
@@ -184,8 +286,39 @@ a {
     justify-content: center;
   }
 }
+@media (max-width: 768px) {
+  .header__add-btn {
+    position: absolute;
+    left: 42px;
+  }
+}
 @media screen and (max-width: 1150px) {
   .header__add-btn .btn__text {
     display: none;
   }
+}
+.header__menu {
+  display: none;
+  background-color: #1d1f20;
+  width: 460px;
+  position: absolute;
+  left: 200px;
+  top: 56px;
+  padding-top: 8px;
+}
+@media (max-width: 768px) {
+  .header__menu {
+    left: -16px;
+  }
+}
+.header__menu-item {
+  margin-left: 7px;
+}
+.header__menu-link {
+  display: inline-flex;
+  margin-bottom: 6px;
+}
+.header__menu-divider {
+  padding-top: 10px;
+  border-top: 1px solid #5a5d62;
 }/*# sourceMappingURL=styles.css.map */
