--- a/css/styles.scss
+++ b/css/styles.scss
@@ -45,32 +45,7 @@ a {
   border: none;
   outline: none;
   cursor: pointer;
-  &--add {
-    background-color: #ff7900;
-    box-shadow: 0 0 0 0 #ff7900;
-    &:hover {
-      background-color: #ff9300;
-      box-shadow: 0 0 0 0 #ff9300;
-    }
-    &:active {
-      background-color: #e56e00;
-    }
-  }
-  &--register {
-    background-color: #ffffff1a;
-    &:hover {
-      background-color: hsla(0, 0%, 100%, 0.2);
-    }
-    &:active {
-      background-color: hsla(0, 0%, 100%, 0.1);
-    }
-    &:disabled {
-      --background-color: hsla(0, 0%, 100%, 0.1);
-      color: hsla(0, 0%, 100%, 0.2);
-    }
-  }
-  &--menu {
-    background-color: transparent;
+  background-color: transparent;
     color: hsla(0, 0%, 100%, 0.8);
     &:hover {
       background-color: hsla(0, 0%, 100%, 0.2);
@@ -83,6 +58,66 @@ a {
     &:disabled {
       background-color: transparent;
       color: hsla(0, 0%, 100%, 0.2);
+    }
+  &--orange {
+    background-color: #ff7900;
+    box-shadow: 0 0 0 0 #ff7900;
+    &:hover {
+      background-color: #ff9300;
+      box-shadow: 0 0 0 0 #ff9300;
+    }
+    &:active {
+      background-color: #e56e00;
+    }
+  }
+  &--grey {
+    background-color: #ffffff1a;
+    &:hover {
+      background-color: hsla(0, 0%, 100%, 0.2);
+    }
+    &:active {
+      background-color: hsla(0, 0%, 100%, 0.1);
+    }
+    &:disabled {
+      --background-color: hsla(0, 0%, 100%, 0.1);
+      color: hsla(0, 0%, 100%, 0.2);
+    }
+  }
+}
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba( #000000,.35);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__inner {
+    position: relative;
+    width: 630px;
+    height: 540px;
+    background-color: #ffffff;
+    border-radius: 8px;
+  }
+  &__btn-close {
+    position: absolute;
+    right: 14px;
+    top: 14px;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color;
+    transition-duration: .2s;
+    transition-timing-function: ease-out;
+    &:hover {
+      background-color: rgba( #000000,.2);
     }
   }
 }
@@ -99,7 +134,11 @@ a {
   background-color: $main_color;
   color: $white_color;
   height: 56px;
+  &__inner {
+    position: relative;
+  }
   &__content {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -120,12 +159,26 @@ a {
     font-weight: 500;
     color: $white_color;
     margin-right: 8px;
+    @media (max-width: 768px) {
+      margin-right: 0;
+    }
   }
   &__logo-img {
     width: 36px;
     margin-right: 8px;
   }
   &__form {
+    //border: 1px solid red;
+    &.active {
+      @media (max-width: 768px) {
+        position: absolute;
+        z-index: 2;
+        right: 48px;
+        left: 48px;
+      }
+    }
+  }
+  &__form-content {
     position: relative;
   }
   &__form-icon {
@@ -134,6 +187,14 @@ a {
     position: absolute;
     left: 8px;
     top: 6px;
+    @media (max-width: 768px) {
+      color: $white_color;
+    }
+    &.active {
+      @media (max-width: 768px) {
+        color: #8f949b;
+      }
+    }
   }
   &__form-input {
     border: none;
@@ -147,6 +208,18 @@ a {
     margin-right: 7px;
     font-size: 1rem;
     font-weight: 400;
+    @media (max-width: 768px) {
+      width: 35px;
+      padding-left: 34px;
+      padding-right: 0;
+      background-color: #ffffff1a;
+    }
+    &.active {
+      @media (max-width: 768px) {
+        width: 100%;
+        background-color: $white_color;
+      }
+    }
     &::placeholder {
       color: #8f949b;
       font-weight: 500;
@@ -154,6 +227,31 @@ a {
     }
     &:focus {
       box-shadow: 0 0 0 4px #ff7900;
+    }
+  }
+  &__mobile-menu-btn {
+      padding: 0;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      justify-content: center;
+      display: none;
+      &.active {
+        background-color: #868789;
+        color: #ffffff;
+      }
+      @media (max-width: 768px) {
+        display: flex;
+      }
+  }
+  &__menu-btn {
+
+    &.active {
+      background-color: #868789;
+      color: #ffffff;
+    }
+    @media (max-width: 768px) {
+      display: none;
     }
   }
   &__register-btn {
@@ -164,6 +262,7 @@ a {
       height: 36px;
       border-radius: 50%;
       justify-content: center;
+      margin-left: 0;
     }
     .btn__text {
       @media screen and (max-width: 1150px) {
@@ -181,10 +280,37 @@ a {
       border-radius: 50%;
       justify-content: center;
     }
+    @media (max-width: 768px) {
+      position: absolute;
+      left: 42px;
+    }
     .btn__text {
       @media screen and (max-width: 1150px) {
         display: none;
       }
     }  
+  }
+  &__menu {
+    display: none;
+    background-color: #1d1f20;
+    width: 460px;
+    position: absolute;
+    left: 200px;
+    top: 56px;
+    padding-top: 8px;
+    @media (max-width: 768px) {
+      left: -16px;
+    }
+  }
+  &__menu-item {
+    margin-left: 7px;
+  }
+  &__menu-link {
+    display: inline-flex;
+    margin-bottom: 6px;
+  }
+  &__menu-divider {
+    padding-top: 10px;
+    border-top: 1px solid #5a5d62;
   }
 }
