made card component

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,10 +23,10 @@ a {
 }
 
 .btn {
-  all: unset;
   height: 36px;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 7px;
   padding: 0 14px;
   border-radius: 36px;
@@ -79,23 +79,338 @@ a {
   --background-color: hsla(0, 0%, 100%, 0.1);
   color: hsla(0, 0%, 100%, 0.2);
 }
+.btn--outline {
+  background-color: #ffffff;
+  border: 1px solid #bfc3c8;
+  color: #5a5d62;
+}
+.btn--outline:hover {
+  background-color: #f6f7f9;
+  border-color: #8f949b;
+  color: #5a5d62;
+}
+.btn--outline:active {
+  background-color: #e9eaed;
+  border-color: #5a5d62;
+  color: #5a5d62;
+}
+.btn__counter {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff7900;
+  color: #ffffff;
+  border-radius: 50%;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 16px;
+}
+.card__picture {
+  width: 160px;
+}
+@media (max-width: 768px) {
+  .card__picture {
+    position: absolute;
+    width: 72px;
+    height: 72px;
+    top: 67px;
+  }
+}
+.card__body {
+  flex: 1;
+  padding-left: 16px;
+  overflow: hidden;
+}
+@media (max-width: 768px) {
+  .card__body {
+    padding-left: 0;
+  }
+}
+.card__img {
+  display: block;
+  -o-object-fit: contain;
+     object-fit: contain;
+  max-width: 100%;
+  background-color: #f7f7f7;
+}
+.card__head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+.card__head-btn span {
+  color: #e00034;
+}
+.card__head-btn span:first-child {
+  color: #35373b;
+}
+.card__head-list {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.card__head-item {
+  display: flex;
+  align-items: center;
+  color: #8f949b;
+  white-space: nowrap;
+  text-overflow: hidden;
+}
+@media (max-width: 680px) {
+  .card__head-item:last-child {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .card__desc {
+    padding-left: 74px;
+  }
+}
+.card__desc-title {
+  font-size: 1.25rem;
+  line-height: 1.625rem;
+  color: #35373b;
+  font-weight: 500;
+  margin-bottom: 8px;
+}
+@media (max-width: 768px) {
+  .card__desc-title {
+    font-size: 1.1rem;
+    overflow: hidden;
+    display: -webkit-box;
+    /* display 2 lines only */
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+}
+.card__desc-title:hover {
+  color: #ff7900;
+}
+.card__desc-list {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+}
+.card__desc-item {
+  display: flex;
+  align-items: center;
+  padding-left: 6px;
+  padding-right: 6px;
+  border-right: 1px solid #d1d5db;
+}
+.card__desc-item:first-child {
+  padding-left: 0;
+}
+.card__desc-item:last-child {
+  border-right: none;
+}
+.card__desc-price {
+  font-size: 1.25rem;
+  color: #ff7900;
+  font-weight: 700;
+  margin-right: 6px;
+  white-space: nowrap;
+  text-overflow: hidden;
+}
+.card__desc-company {
+  color: #ff7900;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-right: 6px;
+}
+.card__desc-discount {
+  color: #8f949b;
+  font-size: 1.3rem;
+  font-weight: 400;
+  text-decoration: line-through;
+  margin-right: 4px;
+  white-space: nowrap;
+  text-overflow: hidden;
+}
+.card__desc-percent {
+  color: #35373b;
+  font-size: 1.3rem;
+  margin-right: 8px;
+  white-space: nowrap;
+  text-overflow: hidden;
+}
+.card__delivery {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  color: #8f949b;
+}
+.card__delivery-text {
+  white-space: nowrap;
+  text-overflow: hidden;
+}
+@media (max-width: 768px) {
+  .card__delivery-text {
+    display: none;
+  }
+}
+.card__bottom {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media (max-width: 768px) {
+  .card__bottom {
+    padding-bottom: 42px;
+  }
+}
+.card__avatar {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  color: #35373b;
+  font-size: 0.85rem;
+  font-weight: 700;
+}
+.card__avatar-img {
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+}
+.card__actions {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.card__btn-bookmark {
+  padding: 0;
+  width: 36px;
+  border-radius: 50%;
+}
+@media (max-width: 768px) {
+  .card__btn-solde {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
+
+.aside-card {
+  display: flex;
+  gap: 8px;
+}
+.aside-card__img {
+  width: 84px;
+  height: 84px;
+  border-radius: 8px;
+}
+.aside-card__title {
+  color: #35373b;
+  font-size: 1rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+  overflow: hidden;
+  display: -webkit-box;
+  /* display 2 lines only */
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+.aside-card__title span {
+  color: #e00034;
+}
+.aside-card__price {
+  text-align: right;
+  color: #ff7900;
+  font-weight: 700;
+  margin-top: 8px;
+}
+
+.input-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #8f949b;
+  cursor: pointer;
+}
+.input-checkbox__input {
+  display: none;
+}
+.input-checkbox__input:checked ~ .input-checkbox__input-box > .input-checkbox__input-icon {
+  opacity: 1;
+}
+.input-checkbox__input-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  border: 1px solid #d1d5db;
+  background-color: #fff;
+  border-radius: 8px;
+}
+.input-checkbox__input-icon {
+  color: #ff7900;
+  opacity: 0;
+}
+
+.input-text__label {
+  font-weight: 700;
+  color: #5a5d62;
+  text-align: left;
+  width: 100%;
+  display: block;
+  line-height: 1.25rem;
+  margin-bottom: 8px;
+}
+.input-text__field {
+  display: flex;
+  width: 100%;
+  padding: 9px 16px;
+  outline: none;
+  border: 1px solid #d1d5db;
+  background-color: #fff;
+  border-radius: 8px;
+  font-size: 1rem;
+}
+.input-text__field:focus {
+  border-color: #ff7900;
+  box-shadow: 0 0 0 1px #ff7900;
+}
 
 .modal {
+  display: none;
   position: fixed;
+  top: 0;
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.35);
   z-index: 10;
+}
+.modal__outer {
+  height: inherit;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 .modal__inner {
   position: relative;
   width: 630px;
-  height: 540px;
+  min-height: 540px;
   background-color: #ffffff;
   border-radius: 8px;
+  padding: 16px;
+  text-align: center;
 }
 .modal__btn-close {
   position: absolute;
@@ -115,11 +430,38 @@ a {
 .modal__btn-close:hover {
   background-color: rgba(0, 0, 0, 0.2);
 }
+.modal__title {
+  color: #35373b;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.75rem;
+  margin-bottom: 24px;
+}
+.modal__social-btn {
+  width: 100%;
+  margin-bottom: 12px;
+}
+.modal__social-check {
+  justify-content: flex-start;
+  gap: 8px;
+  margin-bottom: 20px;
+}
+.modal__social-check:hover .input-checkbox__input-box {
+  border-color: #35373b;
+}
+.modal__input-box {
+  margin-bottom: 16px;
+}
 
 .container {
   max-width: 1280px;
   padding: 0 16px;
   margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .container {
+    padding: 0 8px;
+  }
 }
 
 .header {
@@ -155,12 +497,23 @@ a {
 }
 @media (max-width: 768px) {
   .header__logo {
-    margin-right: 0;
+    margin-right: -40px;
+  }
+}
+@media (max-width: 450px) {
+  .header__logo {
+    font-size: 1.2rem;
   }
 }
 .header__logo-img {
   width: 36px;
   margin-right: 8px;
+}
+@media (max-width: 450px) {
+  .header__logo-img {
+    width: 22px;
+    margin-right: 4px;
+  }
 }
 @media (max-width: 768px) {
   .header__form.active {
@@ -215,6 +568,7 @@ a {
   .header__form-input.active {
     width: 100%;
     background-color: #ffffff;
+    box-shadow: 0 0 0 4px #ff7900;
   }
 }
 .header__form-input::-moz-placeholder {
@@ -305,6 +659,7 @@ a {
   left: 200px;
   top: 56px;
   padding-top: 8px;
+  z-index: 2;
 }
 @media (max-width: 768px) {
   .header__menu {
@@ -321,4 +676,284 @@ a {
 .header__menu-divider {
   padding-top: 10px;
   border-top: 1px solid #5a5d62;
+}
+.header__submenu-list {
+  margin: 20px 14px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 25px;
+}
+.header__submenu-link {
+  color: rgba(255, 255, 255, 0.8);
+}
+.header__submenu-link:hover {
+  color: #ffffff;
+}
+
+.slider-banner {
+  background-color: #1d1f20;
+  height: 76px;
+  display: flex;
+  align-items: center;
+}
+.slider-banner__btn {
+  border-radius: 8px;
+  font-weight: 700;
+  font-size: 0.875rem;
+  width: -moz-fit-content !important;
+  width: fit-content !important;
+}
+.slider-banner__btn .btn__text {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.slider-banner .swiper-button-next:after, .slider-banner .swiper-button-prev:after {
+  color: hsla(0, 0%, 100%, 0.8);
+  font-size: 0.8rem;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  background-color: rgb(113, 111, 111);
+}
+.slider-banner .swiper-button-next:after:hover {
+  color: red;
+}
+.slider-banner .swiper-button-next:after {
+  content: "next";
+}
+.slider-banner .swiper-button-next:after:hover {
+  background-color: hsla(0, 0%, 100%, 0.2);
+  color: red;
+}
+.slider-banner .swiper-button-prev:after {
+  content: "prev";
+}
+.slider-banner .swiper-button-prev:after:hover {
+  background-color: hsla(0, 0%, 100%, 0.2);
+  color: #ffffff;
+}
+
+.nav__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 52px;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .nav__content {
+    margin-left: -16px;
+    padding-right: 8px;
+  }
+}
+.nav__dynamic-btn {
+  all: unset;
+  border: none;
+  height: inherit;
+  display: none;
+  align-items: center;
+  gap: 4px;
+  color: #ff7900;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0 16px;
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  .nav__dynamic-btn {
+    display: flex;
+  }
+}
+.nav__dynamic-btn.active {
+  color: #ffffff;
+  background-color: #ff7900;
+}
+.nav__dynamic-btn.active .nav__dynamic-icon {
+  transform: rotateZ(180deg);
+}
+.nav__list {
+  display: flex;
+  height: inherit;
+}
+@media (max-width: 768px) {
+  .nav__list {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 52px;
+    z-index: 2;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 268px;
+    height: initial;
+    background-color: #fff;
+    color: #63686d;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border: 1px solid #d1d5db;
+    box-shadow: 1px 6px 9px -1px rgba(0, 0, 0, 0.3);
+  }
+}
+@media (max-width: 768px) {
+  .nav__list.active {
+    display: flex;
+  }
+}
+.nav__item {
+  height: inherit;
+}
+@media (max-width: 768px) {
+  .nav__item {
+    width: 100%;
+    border-bottom: 1px solid #d1d5db;
+  }
+}
+.nav__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
+  padding-left: 16px;
+  padding-right: 16px;
+  color: #63686d;
+  font-size: 1rem;
+  font-weight: 500;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .nav__link {
+    height: 56px;
+    justify-content: flex-start;
+  }
+}
+.nav__link:hover {
+  color: #ff7900;
+}
+.nav__link.active {
+  color: #ff7900;
+}
+.nav__link.active::after {
+  content: "";
+  height: 3px;
+  width: 100%;
+  background-color: #ff7900;
+  position: absolute;
+  left: 0;
+  bottom: -1.5px;
+}
+@media (max-width: 768px) {
+  .nav__link.active::after {
+    display: none;
+  }
+}
+.nav__filter {
+  position: relative;
+}
+.nav__filter-content {
+  display: none;
+  background-color: #ffffff;
+  border: 1px solid #d1d5db;
+  box-shadow: 1px 6px 9px -1px rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+  position: absolute;
+  top: 46px;
+  right: 0;
+  width: 308px;
+  padding-bottom: 20px;
+  z-index: 2;
+}
+.nav__filter-list {
+  margin-bottom: 20px;
+}
+.nav__filter-item {
+  border-bottom: 1px solid #d1d5db;
+  height: 56px;
+  padding-left: 16px;
+  padding-right: 16px;
+  line-height: 56px;
+}
+.nav__filter-btn {
+  position: relative;
+}
+@media (max-width: 768px) {
+  .nav__filter-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    padding: 0;
+    border-radius: 50%;
+  }
+}
+@media (max-width: 768px) {
+  .nav__filter-btn .btn__text {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .nav__filter-btn .btn__counter {
+    position: absolute;
+    top: -6px;
+    right: -6px;
+  }
+}
+.nav__filter-btn.active {
+  color: #ff7900;
+  border-color: #ff7900;
+  background-color: #fff1e6;
+}
+.nav__filter-btn.active:hover {
+  border-color: #fff1e6;
+}
+.nav__filter-add-btn {
+  justify-content: center;
+  width: 246px;
+  margin: 0 auto;
+}
+
+.main {
+  background-color: #e9eaed;
+  min-height: 100vh;
+  padding-top: 0.5rem;
+}
+.main__content {
+  display: flex;
+  gap: 0.5rem;
+}
+@media (max-width: 1140px) {
+  .main__content {
+    flex-direction: column-reverse;
+  }
+}
+.main__products {
+  flex: 3;
+}
+.main__aside {
+  flex: 1;
+}
+.main__product-card {
+  margin-bottom: 8px;
+}
+.main__aside-card {
+  background-color: #ffffff;
+  padding: 16px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+@media (max-width: 1140px) {
+  .main__aside-card {
+    flex-direction: row;
+  }
+}
+@media (max-width: 650px) {
+  .main__aside-card {
+    flex-wrap: wrap;
+  }
 }/*# sourceMappingURL=styles.css.map */
