--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,6 +9,7 @@
 
 $main_color: #35373b;
 $white_color: #ffffff;
+$orange_color: #ff7900;
 
 html {
   font-size: 100%;
@@ -28,10 +29,11 @@ a {
 
 //COMPONENTS
 .btn {
-  all: unset;
+  //all: unset;
   height: 36px;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 7px;
   padding: 0 14px;
   border-radius: 36px;
@@ -83,23 +85,345 @@ a {
       color: hsla(0, 0%, 100%, 0.2);
     }
   }
+  &--outline {
+    background-color: $white_color;
+    border: 1px solid #bfc3c8;
+    color: #5a5d62;
+    &:hover {
+      background-color: #f6f7f9;
+      border-color: #8f949b;
+      color: #5a5d62;
+    }
+    &:active {
+      background-color: #e9eaed;
+      border-color: #5a5d62;
+      color: #5a5d62;
+    }
+  }
+  &__counter {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ff7900;
+    color: #ffffff;
+    border-radius: 50%;
+    font-size: .8rem;
+    font-weight: 500;
+  }
+}
+
+.card {
+  position: relative;
+  display: flex;
+  background-color: $white_color;
+  border-radius: 8px;
+  padding: 16px;
+  &__picture {
+    width: 160px;
+    @media (max-width: 768px) {
+      position: absolute;
+      width: 72px;
+      height: 72px;
+      top: 67px;
+    }
+  }
+  &__body {
+    flex: 1;
+    padding-left: 16px;
+    overflow: hidden;
+    @media (max-width: 768px) {
+      padding-left: 0;
+    }
+  }
+  &__img {
+    display: block;
+    object-fit: contain;
+    max-width: 100%;
+    background-color: #f7f7f7;
+  }
+  &__head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 12px;
+  }
+  &__head-btn {
+    span {
+      color: #e00034;
+      &:first-child {
+        color: #35373b;
+      }
+    }
+  }
+  &__head-list {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+  &__head-item {
+    display: flex;
+    align-items: center;
+    color: #8f949b;
+    white-space: nowrap;
+    text-overflow: hidden;
+    &:last-child {
+      @media (max-width: 680px) {
+        display: none;
+      }
+    }
+  }
+  &__desc {
+    
+    @media (max-width: 768px) {
+      padding-left: 74px;
+    }
+  }
+  &__desc-title {
+    font-size: 1.25rem;
+    line-height: 1.625rem;
+    color: #35373b;
+    font-weight: 500;
+    margin-bottom: 8px;
+    @media (max-width: 768px) {
+      font-size: 1.1rem;
+      overflow: hidden;
+      display: -webkit-box;
+      /* display 2 lines only */
+      -webkit-line-clamp: 2;
+      line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+    &:hover {
+      color:$orange_color;
+    }
+  }
+  &__desc-list {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+    //overflow: hidden;
+  }
+  &__desc-item {
+    display: flex;
+    align-items: center;
+    padding-left: 6px;
+    padding-right: 6px;
+    border-right: 1px solid #d1d5db;
+    //overflow: hidden;
+    &:first-child {
+      padding-left: 0;
+    }
+    &:last-child {
+      border-right: none;
+    }
+  }
+  &__desc-price {
+    font-size: 1.25rem;
+    color:$orange_color;
+    font-weight: 700;
+    margin-right: 6px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__desc-company {
+    color: $orange_color;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-right: 6px;
+  }
+  &__desc-discount {
+    color: #8f949b;
+    font-size: 1.3rem;
+    font-weight: 400;
+    text-decoration: line-through;
+    margin-right: 4px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__desc-percent {
+    color: #35373b;
+    font-size: 1.3rem;
+    margin-right: 8px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__delivery {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: #8f949b;
+  }
+  &__delivery-text {
+    white-space: nowrap;
+    text-overflow: hidden;
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+  &__bottom {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    //border: 1px solid orange;
+    @media (max-width: 768px) {
+      padding-bottom: 42px;
+    }
+  }
+  &__avatar {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: #35373b;
+    font-size: .85rem;
+    font-weight: 700;
+  }
+  &__avatar-img {
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+  }
+  &__actions {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+  &__btn-bookmark {
+    padding: 0;
+    width: 36px;
+    border-radius: 50%;
+  }
+  &__btn-solde {
+
+    @media (max-width: 768px) {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+  }
+}
+
+//ASIDE CARD
+.aside-card {
+  display: flex;
+  gap: 8px;
+  &__img {
+    width: 84px;
+    height: 84px;
+    border-radius: 8px;
+  }
+  &__body {
+
+  }
+  &__title {
+    color: $main_color;
+    font-size: 1rem;
+    //font-size: .875rem;
+    line-height: 1.25rem;
+    font-weight: 500;
+    overflow: hidden;
+    display: -webkit-box;
+    /* display 2 lines only */
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+    span {
+      color: #e00034;
+    }
+  }
+  &__price {
+    text-align: right;
+    color: $orange_color;
+    font-weight: 700;
+    margin-top: 8px;
+  }
+}
+
+//INPUT CHECKBOX
+.input-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #8f949b;
+  cursor: pointer;
+  &__input {
+    display: none;
+    &:checked ~ .input-checkbox__input-box > .input-checkbox__input-icon {
+      opacity: 1;
+    }
+  }
+  &__input-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border: 1px solid #d1d5db;
+    background-color: #fff;
+    border-radius: 8px;
+  }
+  &__input-icon {
+    color: $orange_color;
+    opacity: 0;
+  }
+}
+
+//INPUT TEXT
+.input-text {
+
+  &__label {
+    font-weight: 700;
+    color: #5a5d62;
+    text-align: left;
+    //border: 1px solid;
+    width: 100%;
+    display: block;
+    line-height: 1.25rem;
+    margin-bottom: 8px;
+  }
+  &__field {
+    display: flex;
+    width: 100%;
+    padding: 9px 16px;
+    outline: none;
+    border: 1px solid #d1d5db;
+    background-color: #fff;
+    border-radius: 8px;
+    font-size: 1rem;
+    &:focus {
+      border-color: $orange_color;
+      box-shadow: 0 0 0 1px $orange_color;
+    }
+  }
 }
 
 .modal {
+  display: none;
   position: fixed;
+  top: 0;
   width: 100%;
   height: 100vh;
   background-color: rgba( #000000,.35);
   z-index: 10;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  &__outer {
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
   &__inner {
     position: relative;
     width: 630px;
-    height: 540px;
+    min-height: 540px;
     background-color: #ffffff;
     border-radius: 8px;
+    padding: 16px;
+    text-align: center;
   }
   &__btn-close {
     position: absolute;
@@ -108,7 +432,6 @@ a {
     width: 28px;
     height: 28px;
     border-radius: 50%;
-    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -120,13 +443,46 @@ a {
       background-color: rgba( #000000,.2);
     }
   }
+  &__title {
+    color: $main_color;
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.75rem;
+    margin-bottom: 24px;
+  }
+  &__social-btn {
+    width: 100%;
+    margin-bottom: 12px;
+  }
+  &__social-check {
+    justify-content: flex-start;
+    gap: 8px;
+    margin-bottom: 20px;
+    &:hover .input-checkbox__input-box {
+      border-color: $main_color;
+    }
+  }
+  &__input-box {
+    margin-bottom: 16px;
+  }
+}
+
+// .card {
+
+// }
+
+.wrapper {
+  // overflow: hidden;
+  // min-height: 100vh;
 }
 
 .container {
   max-width: 1280px;
   padding: 0 16px;
   margin: 0 auto;
-  
+  @media (max-width: 768px) {
+    padding: 0 8px;
+  }
 }
 
 //HEADER
@@ -160,15 +516,22 @@ a {
     color: $white_color;
     margin-right: 8px;
     @media (max-width: 768px) {
-      margin-right: 0;
+      margin-right: -40px;
+    }
+    @media (max-width: 450px) {
+      font-size: 1.2rem;
     }
   }
   &__logo-img {
     width: 36px;
     margin-right: 8px;
+    @media (max-width: 450px) {
+      width: 22px;
+      margin-right: 4px;
+    }
   }
   &__form {
-    //border: 1px solid red;
+    
     &.active {
       @media (max-width: 768px) {
         position: absolute;
@@ -218,6 +581,7 @@ a {
       @media (max-width: 768px) {
         width: 100%;
         background-color: $white_color;
+        box-shadow: 0 0 0 4px #ff7900;
       }
     }
     &::placeholder {
@@ -268,8 +632,7 @@ a {
       @media screen and (max-width: 1150px) {
         display: none;
       }
-    }
-    
+    } 
   }
   &__add-btn {
     margin-left: 7px;
@@ -298,6 +661,7 @@ a {
     left: 200px;
     top: 56px;
     padding-top: 8px;
+    z-index: 2;
     @media (max-width: 768px) {
       left: -16px;
     }
@@ -312,5 +676,298 @@ a {
   &__menu-divider {
     padding-top: 10px;
     border-top: 1px solid #5a5d62;
+  }
+  &__submenu-list {
+    margin: 20px 14px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 25px;
+  }
+  &__submenu-link {
+    color: #ffffffcc;
+    &:hover {
+      color: #ffffff;
+    }
+  }
+}
+
+//SLIDER BANNER
+.slider-banner { 
+  background-color: #1d1f20;
+  height: 76px;
+  display: flex;
+  align-items: center;
+  //display: none;
+  &__content {
+    
+  }
+  &__btn {
+    border-radius: 8px;
+    font-weight: 700;
+    font-size: .875rem;
+    width: fit-content!important;
+    .btn__text {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+  }
+
+  //SWIPER
+  .swiper  {
+    // border: 2px solid orange;
+    // width: 900px;
+  }
+  .swiper-wrapper {
+    //background-color: #e00034;
+  }
+  .swiper-button-next {
+    //border: 1px solid red;
+    
+  }
+  .swiper-button-next:after, .swiper-button-prev:after {
+    color: hsla(0, 0%, 100%, 0.8);
+    font-size: .8rem;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    background-color: rgb(113, 111, 111); //hsla(24, 92%, 19%, 0.196);
+    // &:hover {
+    //   background-color: hsla(0, 0%, 100%, 0.2);
+    //   color: $white_color;
+    // }
+  }
+
+  .swiper-button-next:after:hover {
+    color: red;
+  }
+
+  .swiper-button-next:after {
+    content: 'next';
+    //content: '';
+    &:hover {
+      background-color: hsla(0, 0%, 100%, 0.2);
+      color: red;//$white_color;
+    }
+  }
+  .swiper-button-prev:after {
+    content: 'prev';
+    //content: '';
+    &:hover {
+      background-color: hsla(0, 0%, 100%, 0.2);
+      color: $white_color;
+    }
+  }
+}
+
+//NAV
+.nav {
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 52px;
+    position: relative;
+    @media (max-width: 768px) {
+      margin-left: -16px;
+      //margin-right: -16px;
+      padding-right: 8px;
+    }
+  }
+  &__dynamic-btn {
+    all:unset;
+    border: none;
+    height: inherit;
+    display: none; //flex;
+    align-items: center;
+    gap: 4px;
+    color: $orange_color;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 0 16px;
+    cursor: pointer;
+    @media (max-width: 768px) {
+      display: flex;
+    }
+    &.active {
+      color: $white_color;
+      background-color: $orange_color;
+      .nav__dynamic-icon {
+        transform: rotateZ(180deg);
+      }
+    }
+  }
+  &__list {
+    display: flex;
+    height: inherit ;
+    @media (max-width: 768px) {
+      display: none;
+      position: absolute;
+      left: 0;
+      top: 52px;
+      z-index: 2;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 268px;
+      height: initial;
+      background-color: #fff;
+      color: #63686d;
+      border-bottom-left-radius: 8px;
+      border-bottom-right-radius: 8px;
+      border: 1px solid #d1d5db;
+      box-shadow: 1px 6px 9px -1px rgba(0, 0, 0, .3);
+    }
+    &.active {
+
+      @media (max-width: 768px) {
+        display: flex;
+      }
+    }
+  }
+  &__item {
+    height: inherit;
+    @media (max-width: 768px) {
+      width: 100%;
+      border-bottom: 1px solid #d1d5db;
+    }
+  }
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    //border: 1px solid red;
+    height: inherit;
+    padding-left: 16px;
+    padding-right: 16px;
+    color: #63686d;
+    font-size: 1rem;
+    font-weight: 500;
+    position: relative;
+    @media (max-width: 768px) {
+      height: 56px;
+      justify-content: flex-start;
+    }
+    &:hover {
+      color: #ff7900;
+    }
+    &.active {
+      color: #ff7900;
+      &::after {
+        content: "";
+        height: 3px;
+        width: 100%;
+        background-color: #ff7900;
+        position: absolute;
+        left: 0;
+        bottom: -1.5px;
+        @media (max-width: 768px) {
+          display: none;
+        }
+      }
+    }
+  }
+  &__filter {
+    position: relative;
+  }
+  &__filter-content {
+    display: none;
+    background-color: $white_color;
+    border: 1px solid #d1d5db;
+    box-shadow: 1px 6px 9px -1px rgba(0, 0, 0, .3);
+    border-radius: 8px;
+    position: absolute;
+    top: 46px;
+    right: 0;
+    width: 308px;
+    padding-bottom: 20px;
+    z-index: 2;
+  }
+  &__filter-list {
+    margin-bottom: 20px;
+  }
+  &__filter-item {
+    border-bottom: 1px solid #d1d5db;
+    height: 56px;
+    padding-left: 16px;
+    padding-right: 16px;
+    line-height: 56px;
+  }
+  &__filter-btn {
+    position: relative;
+    @media (max-width: 768px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      padding: 0;
+      border-radius: 50%;
+    }
+    .btn__text {
+      @media (max-width: 768px) {
+        display: none;
+      }
+    }
+    .btn__counter {
+      @media (max-width: 768px) {
+        position: absolute;
+        top: -6px;
+        right: -6px;
+      }
+    }
+    &.active {
+      color: $orange_color;
+      border-color: $orange_color;
+      background-color: #fff1e6;
+      &:hover {
+        border-color: #fff1e6;
+      }
+    }
+  }
+  &__filter-add-btn {
+    justify-content: center;
+    width: 246px;
+    margin: 0 auto;
+  }
+}
+
+//MAIN
+.main {
+  background-color: #e9eaed;
+  min-height: 100vh;
+  padding-top: .5rem;
+  &__content {
+    display: flex;
+    gap: .5rem;
+    @media (max-width: 1140px) {
+      flex-direction: column-reverse;
+    }
+  }
+  &__products {
+    flex: 3;
+    //width: 75%;
+  }
+  &__aside {
+    flex: 1;
+  }
+  &__product-card {
+    margin-bottom: 8px;
+  }
+  &__aside-card {
+    background-color: $white_color;
+    padding: 16px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    @media (max-width: 1140px) {
+      flex-direction: row;
+    }
+    @media (max-width: 650px) {
+      flex-wrap: wrap;
+    }
   }
 }
