--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,7 +27,7 @@ a {
   text-decoration: none;
 }
 
-//COMPONENTS
+//----COMPONENTS----//
 .btn {
   //all: unset;
   height: 36px;
@@ -467,13 +467,40 @@ a {
   }
 }
 
-// .card {
+.breadcrumb {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  &__item {
 
-// }
+    &::after {
+      content: "›";
+      display: inline-block;
+      color: #ffffff;
+      opacity: .4;
+      width: 28px;
+      text-align: center;
+    }
+    &:last-child::after {
+      display: none;
+    }
+  }
+  &__link {
+    color: $white_color;
+    font-size: 14px; 
+    &:hover {
+      text-decoration: underline;
+    }
+
+  }
+}
+
+//---- END COMPONENTS ----//
 
 .wrapper {
-  // overflow: hidden;
-  // min-height: 100vh;
+  overflow: hidden;
+  min-height: 100vh;
+  //padding-top: 56px;
 }
 
 .container {
@@ -490,6 +517,13 @@ a {
   background-color: $main_color;
   color: $white_color;
   height: 56px;
+  position: fixed;
+  left: 0;
+  width: 100%;
+  z-index: 9;
+  transition: all;//background-color, border-color, color, stroke, opacity, box-shadow;
+  transition-duration: .4s;
+  transition-timing-function: ease-out;
   &__inner {
     position: relative;
   }
@@ -695,34 +729,29 @@ a {
 .slider-banner { 
   background-color: #1d1f20;
   height: 76px;
-  display: flex;
-  align-items: center;
-  //display: none;
+  padding-top: 20px;
   &__content {
-    
+    padding-left: 32px;
+    padding-right: 32px;
+    position: relative;
   }
   &__btn {
     border-radius: 8px;
     font-weight: 700;
     font-size: .875rem;
-    width: fit-content!important;
+    //width: fit-content!important;
+    overflow: hidden;
     .btn__text {
       white-space: nowrap;
       text-overflow: ellipsis;
     }
   }
 
-  //SWIPER
-  .swiper  {
-    // border: 2px solid orange;
-    // width: 900px;
-  }
-  .swiper-wrapper {
-    //background-color: #e00034;
-  }
   .swiper-button-next {
-    //border: 1px solid red;
-    
+    right: 0;
+  }
+  .swiper-button-prev {
+    left: 0;
   }
   .swiper-button-next:after, .swiper-button-prev:after {
     color: hsla(0, 0%, 100%, 0.8);
@@ -742,20 +771,18 @@ a {
   }
 
   .swiper-button-next:after:hover {
-    color: red;
+    
   }
 
   .swiper-button-next:after {
     content: 'next';
-    //content: '';
     &:hover {
       background-color: hsla(0, 0%, 100%, 0.2);
-      color: red;//$white_color;
+      color: $white_color;
     }
   }
   .swiper-button-prev:after {
     content: 'prev';
-    //content: '';
     &:hover {
       background-color: hsla(0, 0%, 100%, 0.2);
       color: $white_color;
@@ -765,6 +792,7 @@ a {
 
 //NAV
 .nav {
+  background-color: $white_color;
   &__content {
     display: flex;
     justify-content: space-between;
@@ -938,9 +966,11 @@ a {
 .main {
   background-color: #e9eaed;
   min-height: 100vh;
-  padding-top: .5rem;
+  //padding-top: .5rem;
+  margin-top: 56px;
   &__content {
     display: flex;
+    padding-top: .5rem;
     gap: .5rem;
     @media (max-width: 1140px) {
       flex-direction: column-reverse;
@@ -969,5 +999,531 @@ a {
     @media (max-width: 650px) {
       flex-wrap: wrap;
     }
+  }
+  &__breadcrumb {
+    background-color: #1d1f20;
+  }
+  &__detail {
+    max-width: 986px;
+    margin: 0 auto;
+    margin-top: 8px;
+    //margin-bottom: 8px;
+    padding-bottom: 8px;
+    @media (max-width: 1024px) {
+      max-width: 100%;
+    }
+  }
+}
+
+//DETAIL
+.detail {
+  
+  &__card {
+    background-color: $white_color;
+    display: flex;
+    gap: 24px;
+    padding: 24px;
+    border-radius: 8px;
+    @media (max-width: 768px) {
+      flex-direction: column ;
+    }
+  }
+  &__card-picture {
+    flex: 0 0 350px;
+    //border: 1px solid red;
+  }
+  &__card-body {
+    flex: 1;
+  }
+  &__card-head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 16px;
+  }
+  &__card-img {
+    display: block;
+    width: 100%;
+  }
+  &__card-img-btns {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__card-forum {
+    color: $main_color;
+    &:hover {
+      color: $orange_color;
+    }
+  }
+  &__card-date {
+    color: #8f949b;
+    font-size: .875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    margin-bottom: 16px;
+  }
+  &__card-title {
+    font-size: 1.6rem;
+    line-height: 2.1rem;
+    font-weight: 500;
+    color: #35373b;
+    margin-bottom: 30px;
+  }
+
+  &__desc-list {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+  &__desc-item {
+    display: flex;
+    align-items: center;
+    padding-left: 6px;
+    padding-right: 6px;
+    border-right: 1px solid #d1d5db;
+    &:first-child {
+      padding-left: 0;
+    }
+    &:last-child {
+      border-right: none;
+    }
+  }
+  &__desc-price {
+    font-size: 2rem;
+    color:$orange_color;
+    font-weight: 700;
+    margin-right: 6px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__desc-company {
+    color: $orange_color;
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-right: 6px;
+  }
+  &__desc-discount {
+    color: #8f949b;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-decoration: line-through;
+    margin-right: 4px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__desc-percent {
+    color: #8f949b;
+    font-size: 1.5rem;
+    margin-right: 8px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__delivery {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: #8f949b;
+    font-size: 1rem;
+  }
+  &__delivery-text {
+    white-space: nowrap;
+    text-overflow: hidden;
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+  &__btn-solde {
+    height: 56px;
+    color: $white_color;
+    font-size: 18px;
+    padding-left: 48px;
+    padding-right: 48px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    @media (max-width: 1024px) {
+      width: 100%;
+    }
+  }
+  &__avatar {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+  &__avatar-img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+  &__avatar-name {
+    font-size: .75rem;
+    line-height: 1.125rem;
+    color: #35373b;
+    margin-bottom: 7px;
+    span {
+      font-size: 14px;
+      font-weight: 600;
+      margin-left: 4px;
+    }
+  }
+  &__avatar-nav {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 8px;
+  }
+  &__avatar-link {
+    display: flex;
+    align-items: center;
+  }
+  &__avatar-text {
+    font-size: 12px;
+    color: #35373b;
+    margin-left: 3px;
+  }
+  &__chats {
+    background-color: $white_color;
+    padding: 24px;
+    border-radius: 8px;
+    margin-top: 8px;
+  }
+  &__chats-title {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    color: $main_color;
+    font-weight: 500;
+    margin-bottom: 18px;
+  }
+  &__chats-desc {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: $main_color;
+    margin-bottom: 16px;
+  }
+  &__chats-more {
+    font-size: 1rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+    a {
+      color: $orange_color;
+      display: inline-flex;
+      align-items: center;
+      &:hover {
+        opacity: .7;
+      }
+    }
+  }
+  &__chats-btn {
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+  &__chats-nav {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    border-bottom: 1px solid #8f949b;
+    padding-bottom: 22px;
+    margin-bottom: 22px;
+  }
+  &__chats-nav-link {
+    color: #8f949b;
+    font-weight: 500;
+    border-bottom: 1px solid transparent;
+    &:hover {
+      border-color: #8f949b;
+    }
+  }
+  &__chats-info {
+    font-style: italic;
+    font-size: .875rem;
+    line-height: 1.25rem;
+    p {
+      margin-bottom: 16px;
+    }
+    a {
+      font-weight: 700;
+      font-size: 1rem;
+    }
+  }
+  &__chats-bottom {
+    height: 56px;
+    display: flex;
+    align-items: center;
+    gap: 21px;
+    background-color: #f6f7f9;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    margin-left: -24px;
+    margin-right: -24px;
+    margin-bottom: -24px;
+    padding-left: 24px;
+    padding-right: 24px;
+    &--messenger {
+      border-radius: 0;
+      background-color: #ffffff;
+      border-bottom: 1px solid #cbcfd5;
+      margin-bottom: 24px;
+      
+    }
+
+  }
+  &__chats-bottom-link {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: #5a5d62;
+    &:hover {
+      color: #ff7900;//$orange_color;
+    }
+  }
+  &__chats-slider {
+    margin-bottom: 24px;
+
+    .swiper-button-next,
+    .swiper-button-prev {
+      width: 36px;
+      height: 36px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #ffffff;
+      border: 1px solid #bfc3c8;
+      border-radius: 50%;
+      font-size: 1rem;
+      color: #5a5d62;
+      &:after{
+        font-size: .85rem;
+        font-weight: 900;
+      }
+      &:hover {
+        border-color: #8f949b;
+        background-color: #f6f7f9;
+      }
+    }
+  }
+  &__chats-card {
+    display: block;
+  }
+  &__chats-card-picture {
+    background-color: rgba(0, 0, 0, .03);
+    text-align: center;
+    height: 140px;
+    border-radius: 8px;
+    margin-bottom: 12px;
+  }
+  &__chats-card-img {
+    object-fit: contain;
+    max-height: 100%;
+  }
+  &__chats-card-desc {
+    font-size: .875rem;
+    line-height: 1.25rem;
+    color: #35373b;
+    overflow: hidden;
+    display: -webkit-box;
+    /* display 2 lines only */
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  &__chats-card-item {
+    margin-top: 8px;
+  }
+  &__chats-card-price {
+    font-size: 1.125rem;
+    color:$orange_color;
+    font-weight: 700;
+    margin-right: 6px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__chats-card-discount {
+    color: #8f949b;
+    font-size: .875rem;
+    font-weight: 400;
+    text-decoration: line-through;
+    margin-right: 4px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__chats-card-percent {
+    color: #35373b;
+    font-size: .875rem;
+    font-weight: 500;
+    margin-right: 8px;
+    white-space: nowrap;
+    text-overflow: hidden;
+  }
+  &__chats-messenger {
+    display: flex;
+    align-items: center;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #cbcfd5;
+    margin-left: -24px;
+    margin-right: -24px;
+    margin-bottom: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+  &__chats-badge {
+    border-radius: 50%;
+    width: 54px;
+    height: 54px;
+    margin-right: 8px;
+    @media (max-width: 425px) {
+      width: 36px;
+      height: 36px;
+    }
+  }
+  &__chats-input {
+    flex: 1;
+    height: 54px;
+    padding: 16px;
+    outline: none;
+    font-weight: 500;
+    color: #5a5d62;
+    border: 1px solid #d1d5db;
+    background-color: #fff;
+    border-radius: 8px;
+    font-size: 1.1rem;
+    @media (max-width: 425px) {
+      height: 36px;
+    }
+    &:focus {
+      border-color: $orange_color;
+      box-shadow: 0 0 0 1px $orange_color;
+    }
+  }
+  &__chats-user {
+    //border-bottom: 1px solid #cbcfd5;
+  }
+  &__chats-profile {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 24px;
+  }
+  &__chats-profile-img {
+    border-radius: 50%;
+    height: 54px;
+    width: 54px;
+    @media (max-width: 425px) {
+      height: 36px;
+      width: 36px;
+    }
+  }
+  &__chats-profile-name {
+    font-size: .875rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+    color: #35373b;
+    span {
+      color: #8f949b;
+      font-weight: 400;
+    }
+  }
+  &__chats-profile-comment {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    max-width: 280px;
+  }
+}
+
+// FOOTER
+.footer {
+  color: #fff;
+  background-color: #35373b;
+  padding-top: 48px;
+  &__top {
+    color: #8f949b;
+    font-size: .875rem;
+    line-height: 1.25rem;
+    margin-bottom: 20px;
+  }
+  &__nav {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(198px, 350px));
+    padding-bottom: 20px;
+    @media (max-width: 1000px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 650px) {
+      grid-template-columns: 1fr;
+    }
+  }
+  &__bottom {
+    border-top: 1px solid #5a5d62;
+    padding-bottom: 16px;
+    @media (max-width: 780px) {
+      font-size: 12px;
+      padding-bottom: 20px;
+    }
+  }
+  &__list {
+
+    @media (max-width: 650px) {
+      width: 100%;
+    }
+  }
+  &__sublist {
+    @media (max-width: 650px) {
+      display: none;
+    }
+  }
+  &__list-item {
+    line-height: 32px;
+  }
+  &__list-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 700;
+    text-align: left;
+    color: #fff;
+    padding-bottom: 16px;
+    padding-top: 16px;
+    @media (max-width: 650px) {
+      border-top: 1px solid #5a5d62;
+      cursor: pointer;
+    }
+  }
+  &__list-title-icon {
+    display: none;
+    @media (max-width: 650px) {
+      display: block;
+    }
+  }
+
+  &__list-link {
+    letter-spacing: 0.5px;
+    text-align: left;
+    cursor: pointer;
+    white-space: nowrap;
+    color: hsla(0, 0%, 100%, 0.8);
+    font-weight: 700;
+    font-size: .875rem;
+    transition: background-color, border-color, color, stroke, opacity, box-shadow;
+    transition-duration: .2s;
+    transition-timing-function: ease-out;
+    &:hover {
+      color: #ffffff;
+    }
+  }
+  &__bottom-nav {
+    margin-top: 20px;
+  }
+  &__bottom-link {
+    color: #fff;
+    margin-left: 15px;
+    margin-right: 15px;
+    color: #8f949b;
+    font-size: .75rem;
+    line-height: 1.125rem;
   }
 }
